feat: setup for gui