@@ -9,12 +9,26 @@ plugins {
     // Apply the java-library plugin for API and implementation separation.
     `java-library`
     id("application")
+    id("org.javamodularity.moduleplugin") version "1.8.12"
+    id("org.openjfx.javafxplugin") version "0.0.13"
+    id ("org.beryx.jlink") version "2.25.0"
 }
 
 repositories {
     // Use Maven Central for resolving dependencies.
     mavenCentral()
 }
+
+application {
+    mainClass.set("algeo01_23002.gui.MainApp")
+}
+
+javafx {
+    version = "22.0.1"
+    modules = listOf("javafx.controls", "javafx.fxml")
+}
+
+val javafxVersion = "21" // Use the latest version
 
 dependencies {
     // Use JUnit Jupiter for testing.
@@ -26,7 +40,25 @@ dependencies {
     api(libs.commons.math3)
 
     // This dependency is used internally, and not exposed to consumers on their own compile classpath.
+    // Add platform-specific dependencies
+
+    implementation("org.controlsfx:controlsfx:11.2.1")
+    implementation("io.github.mkpaz:atlantafx-base:2.0.1")
+
     implementation(libs.guava)
+}
+
+
+jlink {
+    imageZip.set(project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip"))
+    options.set(listOf("--strip-debug", "--compress", "2", "--no-header-files", "--no-man-pages"))
+    launcher {
+        name = "app"
+    }
+}
+
+tasks.named<org.gradle.api.Task>("jlinkZip") {
+    group = "distribution"
 }
 
 // Apply a specific Java toolchain to ease working on different environments.
@@ -34,11 +66,16 @@ java {
     toolchain {
         languageVersion = JavaLanguageVersion.of(21)
     }
+    modularity.inferModulePath.set(true)
 }
 
 tasks.named<Test>("test") {
     // Use JUnit Platform for unit tests.
     useJUnitPlatform()
+}
+
+tasks.withType<JavaCompile> {
+    options.encoding = "UTF-8"
 }
 
 sourceSets {
@@ -71,7 +108,8 @@ tasks.jar {
     duplicatesStrategy = DuplicatesStrategy.EXCLUDE
 }
 
-application {
-    mainClass.set("algeo01_23002.Main")
+tasks.withType<JavaExec> {
+    jvmArgs = listOf("--add-opens", "java.base/java.lang=ALL-UNNAMED")
 }
+
 
